Renames incorrect name of cell of current stocks

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -115,7 +115,7 @@ arb:
     backend/cells/collected_taxes_cells: #?
     backend/cells/cropping_plan_cells: #?
     backend/cells/cropping_plan_on_cultivable_land_parcels_cells: #?
-    backend/cells/currents_stocks_by_product_nature_cells: #?
+    backend/cells/current_stocks_by_product_nature_cells: #?
     backend/cells/demo_bar_cells: #?
     backend/cells/demo_map_cells: #?
     backend/cells/demo_pie_cells: #?
@@ -588,7 +588,7 @@ arb:
       # edit: "Modifier un support de production"
       # index: "Supports de production"
       # new: "Nouveau support de production"
-      # show: "Support de production\_: %{support.name}"
+      # show: "Support de production\_: %{name}"
     backend/productions:
       # edit: "Modifier la production\_: %{name}"
       # index: "Productions"
@@ -1111,7 +1111,7 @@ arb:
     # currency_with_code: "%{code} - %{name}"
     current: "الحالية"
     current_letter: "البيانات الحالية : %{letter}"
-    # currents_stocks_by_product_nature: "État des stocks"
+    # current_stocks_by_product_nature: "État des stocks"
     custom_field_choice_create: "اضافة خيار جديد للقائمة" #?
     custom_field_create: "انشاء حقل مخصص جديد" #?
     custom_field_sort: "تفريزة الخيارات حسب الاسم" #?
