--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -108,7 +108,7 @@ eng:
     backend/cells/collected_taxes_cells: #?
     backend/cells/cropping_plan_cells: #?
     backend/cells/cropping_plan_on_cultivable_land_parcels_cells: #?
-    backend/cells/currents_stocks_by_product_nature_cells: #?
+    backend/cells/current_stocks_by_product_nature_cells: #?
     backend/cells/demo_bar_cells: #?
     backend/cells/demo_map_cells: #?
     backend/cells/demo_pie_cells: #?
@@ -517,7 +517,7 @@ eng:
       # edit: "Modifier un support de production"
       # index: "Supports de production"
       # new: "Nouveau support de production"
-      # show: "Support de production\_: %{support.name}"
+      # show: "Support de production\_: %{name}"
     backend/productions:
       edit: "Edit production\_: %{name}"
       index: "Productions"
@@ -983,7 +983,7 @@ eng:
     currency_with_code: "%{name} (%{code})"
     current: "Current"
     current_letter: "Current letter\_: %{letter}"
-    # currents_stocks_by_product_nature: "État des stocks"
+    # current_stocks_by_product_nature: "État des stocks"
     custom_field_update: "Custom field update" #?
     data_to_export: "Data to export"
     data_to_extract: "Data to extract"
