--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -1079,6 +1079,7 @@ spa:
     # stopped_at: "Arrêté à"
     # stopped_on: "Arrêté le"
     # storable: "Gérer les stocks"
+    # storage: "Storage"
     # story: "Historique"
     # string_value: "Valeur textuelle"
     subdivision: "Y" #?
