--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -73,9 +73,9 @@ fra:
     backend/building_divisions:
       edit: "Modifier la zone\_: %{name}"
       index: "Zones de bâtiments"
-      new: "Ajout d'une zone"
+      new: "Ajout d’une zone"
       # picture: "Picture backend/building division"
-      show: "Détail d'une zone\_: %{name}"
+      show: "Détail d’une zone\_: %{name}"
     backend/buildings:
       edit: "Modifier un bâtiment"
       index: "Bâtiments"
@@ -196,7 +196,7 @@ fra:
       index: "Zones administratives"
       new: "Ajouter une zone administrative"
     backend/document_archives:
-      show: "Voir l'archive\_: %{name} "
+      show: "Voir l’archive\_: %{name} "
     backend/document_templates:
       edit: "Modifier le modèle de document\_: %{name}"
       index: "Modèles de document"
@@ -238,17 +238,17 @@ fra:
       index: "Établissements"
       new: "Ajout d’un nouvel etablissement"
     backend/event_natures:
-      edit: "Modifier le type d'évènement\_: %{name}"
-      index: "Types d'évènement"
-      new: "Nouveau type d'évènement"
-      show: "Type d'évènement\_: %{name}" #?
+      edit: "Modifier le type d’évènement\_: %{name}"
+      index: "Types d’évènement"
+      new: "Nouveau type d’évènement"
+      show: "Type d’évènement\_: %{name}" #?
     backend/event_participations:
       # edit: "Edit backend/event participation"
       # new: "New backend/event participation"
     backend/events:
       # autocomplete_for_place: "Autocomplete for place backend/event"
       # change_minutes: "Change minutes backend/event"
-      edit: "Modifier l'évènement\_: %{name}"
+      edit: "Modifier l’évènement\_: %{name}"
       index: "Évènements"
       new: "Nouvel évènement"
       show: "Évènement\_: %{name}"
@@ -267,8 +267,8 @@ fra:
       # show: "Show backend/gap"
     backend/helps:
       index: "Aide"
-      show: "Voir l'aide"
-      toggle: "Basculer l'aide"
+      show: "Voir l’aide"
+      toggle: "Basculer l’aide"
     backend/incidents:
       edit: "Modifier l’incident\_: %{name} (%{nature})"
       index: "Incidents"
@@ -618,16 +618,16 @@ fra:
       index: "Taxes"
       new: "Ajouter une nouvelle taxe"
     backend/teams:
-      # edit: "Edit backend/team"
-      # index: "Index backend/team"
-      # new: "New backend/team"
+      edit: "Modifier l’équipe"
+      index: "Équipes"
+      new: "Nouvelle équipe"
     backend/transports:
       deliveries: "Livraisons du transport" #?
       delivery_delete: "Retirer la livraison du transport" #?
       edit: "Modifier le transport %{number}"
       index: "Transports"
       new: "Ajout d’un nouveau transport"
-      show: "Transport %{number}" #?
+      show: "Transport %{number}"
     backend/users:
       edit: "Modifier l’utilisateur\_: %{first_name} %{last_name} (%{name})"
       index: "Utilisateurs"
@@ -636,11 +636,11 @@ fra:
       show: "Utilisateur\_: %{first_name} %{last_name} (%{name})"
       unlock: "Déverrouiller l’utilisateur"
     backend/workers:
-      edit: "Modifier l'équipier %{name}"
-      index: "Equipiers"
+      edit: "Modifier l’équipier %{name}"
+      index: "Équipiers"
       new: "Nouvel équipier"
       # picture: "Picture backend/worker"
-      show: "Equipier %{name}"
+      show: "Équipier %{name}"
     devise/confirmations:
       # new: "New devise/confirmation"
       # show: "Show devise/confirmation"
@@ -955,7 +955,7 @@ fra:
         safari: "Safari"
     balance: "Solde"
     bank_chart: "Évolution du solde des comptes de trésorerie"
-    bban: "Relevé d'identité bancaire (RIB)"
+    bban: "Relevé d’identité bancaire (RIB)"
     beginning: "Début"
     begins: "Commence par"
     body: "Corps du message"
@@ -1003,7 +1003,7 @@ fra:
     close_journal: "Clôturer le journal"
     closed: "Verrouillées"
     clostridial_spores_concentration: "Concentration en spores butyriques"
-    clusters_work_number: "Numéro d'ilot(s)"
+    clusters_work_number: "Numéro d’ilot(s)"
     collected_taxes: "TVA déductibles / collectées"
     column: "Donnée"
     column_family: "Famille"
@@ -1031,6 +1031,7 @@ fra:
     cost: "Coût"
     cost_income_statement: "Charges"
     cost_sum: "Total charges d’exploitation"
+    country: "Pays"
     counts_by_nature: "Nombre de pièces à comptabiliser par type"
     create: "Créer"
     create_journal: "— Créer le journal —"
@@ -1049,6 +1050,7 @@ fra:
     cropping_plan_on_cultivable_land_parcels: "Assolement (Parcelles culturales)"
     csv_statistics: "Statistiques à exporter au format CSV"
     cumul: "Cumul du total et du solde précédent N°%{number}"
+    currency: "Devise"
     currency_with_code: "%{code} - %{name}"
     current: "En cours"
     current_letter: "Lettre en cours\_: %{letter}"
@@ -1086,7 +1088,7 @@ fra:
     document: "Document joint"
     document_natures: "Types de documents"
     document_templates: "Modèles de documents"
-    doer_evaluated_cost: "Coût main d'œuvre"
+    doer_evaluated_cost: "Coût main d’œuvre"
     dont_use_journal: "— Ne pas utiliser de journal —"
     down: "Descendre"
     down_to_level: "Détailler jusqu’au niveau"
@@ -1194,7 +1196,7 @@ fra:
       unreceived: "Non reçus"
       waiting: "À encaisser plus tard"
     indicator: "Indicateur"
-    indicator_value: "Valeur de l'indicateur"
+    indicator_value: "Valeur de l’indicateur"
     indicators: "Indicateurs"
     indicators_evolutions: "Évolutions des indicateurs"
     inel_index: "Index génétique INEL"
@@ -1227,6 +1229,7 @@ fra:
     journals: "Journaux"
     land_parcel_name: "Parcelle"
     land_parcels: "Parcellaire"
+    language: "Langue"
     last_animals: "Dernières naissances"
     last_clients: "Derniers clients"
     last_computed_balance: "Dernière balance calculée"
@@ -1285,7 +1288,7 @@ fra:
     mass: "Poids"
     maximal_temperature: "Température maximale"
     measure_options: "Indicateur de type mesure"
-    meat_withdrawal_period: "Période d'attente avant remise en vente de viande"
+    meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
     medical_informations: "Informations médicales"
     medicines: "Remèdes"
     meeting: "Lieu(x) de rencontre"
@@ -1310,7 +1313,7 @@ fra:
       trade: "Achats/Ventes"
     merge: "Fusionner"
     meteo: "Météo"
-    milk_withdrawal_period: "Période d'attente avant remise en vente de lait"
+    milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
     minimal_temperature: "Température minimale"
     missing_help: "Page inexistante"
     mistake_on_quantities_sum: "La somme des quantités n’est pas égale à la quantité totale produite"
@@ -1552,7 +1555,7 @@ fra:
       one: "%{count} résultat"
       other: "%{count} résultats"
       zero: "Aucun résultat"
-    revenues_by_product_nature: "Chiffre d'affaire par type de produit"
+    revenues_by_product_nature: "Chiffre d’affaire par type de produit"
     reverse: "Appliquer la condition inverse"
     right_modules:
       accountancy: "Droits module Comptabilité"
@@ -1734,7 +1737,7 @@ fra:
     upload: "Téléversement"
     urea_concentration: "Teneur moyenne en urée"
     usage: "Utilisation"
-    usage_duration: "Durée d'utilisation"
+    usage_duration: "Durée d’utilisation"
     use_incoming_payment: "Rattacher l’encaissement %{payment}"
     use_renew: "Sélectionnez un journal pour reporter les à nouveaux"
     user_name: "Nom d’utilisateur"
