--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -1080,6 +1080,7 @@ jpn:
     # stopped_at: "Arrêté à"
     # stopped_on: "Arrêté le"
     # storable: "Gérer les stocks"
+    # storage: "Storage"
     # story: "Historique"
     # string_value: "Valeur textuelle"
     # subject: "Objet"
