--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -80,8 +80,8 @@ spa:
     backend/building_divisions:
       # edit: "Modifier la zone\_: %{name}"
       # index: "Zones de bâtiments"
-      # new: "Ajout d'une zone"
-      # show: "Détail d'une zone\_: %{name}"
+      # new: "Ajout d’une zone"
+      # show: "Détail d’une zone\_: %{name}"
     backend/buildings:
       edit: "Modificacion de un lugar de deposito"
       index: "Lugar de deposito"
@@ -214,7 +214,7 @@ spa:
       # index: "Zones administratives"
       # new: "Ajouter une zone administrative"
     backend/document_archives:
-      # show: "Voir l'archive\_: %{name} "
+      # show: "Voir l’archive\_: %{name} "
     backend/document_templates:
       edit: "Modificacion del modelo de documento : %{name}"
       index: "Modelos de documento"
@@ -258,13 +258,13 @@ spa:
       index: "Establecimientos"
       new: "Añadido de un nuevo establecimiento"
     backend/event_natures:
-      # edit: "Modifier le type d'évènement\_: %{name}"
-      # index: "Types d'évènement"
-      # new: "Nouveau type d'évènement"
-      # show: "Type d'évènement\_: %{name}"
+      # edit: "Modifier le type d’évènement\_: %{name}"
+      # index: "Types d’évènement"
+      # new: "Nouveau type d’évènement"
+      # show: "Type d’évènement\_: %{name}"
     backend/event_participations: #?
     backend/events:
-      # edit: "Modifier l'évènement\_: %{name}"
+      # edit: "Modifier l’évènement\_: %{name}"
       # index: "Évènements"
       # new: "Nouvel évènement"
       # show: "Évènement\_: %{name}"
@@ -281,8 +281,8 @@ spa:
     backend/help: #?
     backend/helps:
       # index: "Aide"
-      # show: "Voir l'aide"
-      # toggle: "Basculer l'aide"
+      # show: "Voir l’aide"
+      # toggle: "Basculer l’aide"
     backend/incidents:
       # edit: "Modifier l’incident\_: %{name} (%{nature})"
       # index: "Incidents"
@@ -649,7 +649,10 @@ spa:
       edit: "Modificar la tasa : %{name}"
       index: "Tasas"
       new: "Añadir nueva tarifa"
-    backend/teams: #?
+    backend/teams:
+      # edit: "Modifier l’équipe"
+      # index: "Équipes"
+      # new: "Nouvelle équipe"
     backend/tool_natures: #?
     backend/tools: #?
     backend/tracking_states: #?
@@ -676,10 +679,10 @@ spa:
       # unlock: "Déverrouiller l’utilisateur"
     backend/vegetals: #?
     backend/workers:
-      # edit: "Modifier l'équipier %{name}"
-      # index: "Equipiers"
+      # edit: "Modifier l’équipier %{name}"
+      # index: "Équipiers"
       # new: "Nouvel équipier"
-      # show: "Equipier %{name}"
+      # show: "Équipier %{name}"
     backend/working_sets: #?
     devise/confirmations: #?
     devise/passwords: #?
@@ -918,7 +921,7 @@ spa:
     # bank_chart: "Évolution du solde des comptes de trésorerie"
     bank_statement_point: "Despuntar el levantar" #?
     bank_statement_update: "Modificar el leventar" #?
-    # bban: "Relevé d'identité bancaire (RIB)"
+    # bban: "Relevé d’identité bancaire (RIB)"
     # beginning: "Début"
     # begins: "Commence par"
     body: "Cuerpo del mensaje"
@@ -969,7 +972,7 @@ spa:
     # close_journal: "Clôturer le journal"
     closed: "Cerrados"
     # clostridial_spores_concentration: "Concentration en spores butyriques"
-    # clusters_work_number: "Numéro d'ilot(s)"
+    # clusters_work_number: "Numéro d’ilot(s)"
     code: "Codigo" #?
     # collected_taxes: "TVA déductibles / collectées"
     # column: "Donnée"
@@ -998,6 +1001,7 @@ spa:
     # cost: "Coût"
     cost_income_statement: "Cargas"
     cost_sum: "Total cargas de explotación"
+    # country: "Pays"
     counts_by_nature: "Nombre de piezas a contabilizar por tipo"
     # create: "Créer"
     create_journal: "-- Crear el periodico --"
@@ -1016,6 +1020,7 @@ spa:
     # cropping_plan_on_cultivable_land_parcels: "Assolement (Parcelles culturales)"
     csv_statistics: "Statisticas a exportar al formato CSV"
     cumul: "Cumul del total y del saldo precedente N°%{number}"
+    # currency: "Devise"
     # currency_with_code: "%{code} - %{name}"
     # current: "En cours"
     current_letter: "Carta en curso : %{carta}"
@@ -1062,7 +1067,7 @@ spa:
     document_natures: "Tipos de documentos"
     document_template_create: "Crear un modelo de documento" #?
     document_templates: "Modelos de documentos"
-    # doer_evaluated_cost: "Coût main d'œuvre"
+    # doer_evaluated_cost: "Coût main d’œuvre"
     dont_use_journal: "-- No utilizar el periodico --"
     # down: "Descendre"
     down_to_level: "Detallar hasta el nivel"
@@ -1173,7 +1178,7 @@ spa:
       # unreceived: "Non reçus"
       # waiting: "À encaisser plus tard"
     # indicator: "Indicateur"
-    # indicator_value: "Valeur de l'indicateur"
+    # indicator_value: "Valeur de l’indicateur"
     # indicators: "Indicateurs"
     # indicators_evolutions: "Évolutions des indicateurs"
     # inel_index: "Index génétique INEL"
@@ -1212,6 +1217,7 @@ spa:
     journals: "Periodico general"
     # land_parcel_name: "Parcelle"
     # land_parcels: "Parcellaire"
+    # language: "Langue"
     # last_animals: "Dernières naissances"
     # last_clients: "Derniers clients"
     # last_computed_balance: "Dernière balance calculée"
@@ -1271,7 +1277,7 @@ spa:
     # mass: "Poids"
     # maximal_temperature: "Température maximale"
     # measure_options: "Indicateur de type mesure"
-    # meat_withdrawal_period: "Période d'attente avant remise en vente de viande"
+    # meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
     # medical_informations: "Informations médicales"
     # medicines: "Remèdes"
     # meeting: "Lieu(x) de rencontre"
@@ -1298,7 +1304,7 @@ spa:
       # trade: "Achats/Ventes"
     # merge: "Fusionner"
     # meteo: "Météo"
-    # milk_withdrawal_period: "Période d'attente avant remise en vente de lait"
+    # milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
     # minimal_temperature: "Température minimale"
     missing_help: "La página no existe"
     # mistake_on_quantities_sum: "La somme des quantités n’est pas égale à la quantité totale produite"
@@ -1544,7 +1550,7 @@ spa:
       one: "1 resultado"
       other: "%{count} resultado"
       zero: "Ningun resultado"
-    # revenues_by_product_nature: "Chiffre d'affaire par type de produit"
+    # revenues_by_product_nature: "Chiffre d’affaire par type de produit"
     # reverse: "Appliquer la condition inverse"
     right_modules:
       accountancy: "Derechos modulo contabilidad"
@@ -1736,7 +1742,7 @@ spa:
     upload: "Séleccionar el fichero de salvaguardia a cargar"
     # urea_concentration: "Teneur moyenne en urée"
     # usage: "Utilisation"
-    # usage_duration: "Durée d'utilisation"
+    # usage_duration: "Durée d’utilisation"
     # use_incoming_payment: "Rattacher l’encaissement %{payment}"
     use_renew: "Seleccionar un periodico para los aplazamientos de nuevo"
     used_accounts: "Cuentos utilozados unico" #?
