--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -620,9 +620,10 @@ eng:
       index: "Taxes"
       new: "Add a new tax"
     backend/teams:
-      # edit: "Modifier l’équipe"
+      # edit: "Modifier une équipe\_: %{name}"
       # index: "Équipes"
       # new: "Nouvelle équipe"
+      # show: "Équipe\_: %{name}"
     backend/trackings:  #?
       show: "Tracking: %{name}" #?
     backend/transports:
