--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -621,7 +621,7 @@ fra:
       edit: "Modifier une équipe\_: %{name}"
       index: "Équipes"
       new: "Nouvelle équipe"
-      show: "Équipe\_: %{name}"
+      show: "Équipe\_: %{name}" #?
     backend/transports:
       deliveries: "Livraisons du transport" #?
       delivery_delete: "Retirer la livraison du transport" #?
