--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -1163,6 +1163,7 @@ arb:
         # protein_matters_concentration: "Teneur en matières protéïques"
         # provisional_grains_yield: "Rendement prévisionnel en grain"
         # provisional_irrigation_water_input: "Quantité d’eau d’irrigation prévisionnelle"
+        # provisional_nitrogen_input: "Quantité d'azote prévisionnelle (à épandre)"
         # reproductor: "Reproducteur"
         # sex: "Sexe"
         # shape: "Forme"
@@ -1689,18 +1690,22 @@ arb:
       items:
         # ampere: "Ampère"
         # are: "Are"
+        # bar: "Bar"
         # candela: "Candela"
         # celsius: "Celsius"
         # cubic_meter: "Mètre cube"
         # day: "Jour"
+        # degree: "Degrée"
         # dozen: "Douzaine"
         # english_horsepower: "Cheval-vapeur anglais"
         # farenheit: "Farenheit"
         # french_horsepower: "Cheval-vapeur français"
+        # gradian: "Gradian"
         # gram: "Gramme"
         # gram_per_liter: "Gramme par litre"
         # hectare: "Hectare"
         # hectoliter: "Hectolitre"
+        # hectopascal: "Hectopascal"
         # hour: "Heure"
         # hundred: "Centaine"
         # joule: "Joule"
@@ -1710,6 +1715,9 @@ arb:
         # kilogram_per_liter: "Kilogramme par litre"
         # kilogram_per_square_meter: "Kilogramme par mètre carré"
         # kilometer: "Kilomètre"
+        # kilometer_per_hour: "Kilomètre par heure"
+        # kilometer_per_second: "Kilométre par seconde"
+        # kilopascal: "Kilopascal"
         # kilowatt: "Kilowatt"
         # kilowatt_hour: "Kilowatt par heure"
         # liter: "Litre"
@@ -1717,6 +1725,7 @@ arb:
         # mass_percent: "Pourcentage de masse"
         # megawatt: "Mégawatt"
         # meter: "Métre"
+        # meter_per_second: "Métre par seconde"
         # microgram: "Microgramme"
         # microgram_per_liter: "Microgramme par litre"
         # milligram: "Milligramme"
@@ -1727,9 +1736,11 @@ arb:
         # minute: "Minute"
         # mole: "Mole"
         # pair: "Paire"
+        # pascal: "Pascal"
         # percent: "Pourcent"
         # quintal: "Quintal"
         # quintal_per_hectare: "Quintal par hectare"
+        # radian: "Radian"
         # second: "Seconde"
         # square_meter: "Mètre carré"
         # ten: "Dix"
