--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -788,6 +788,7 @@ fra:
         protein_matters_concentration: "Teneur en matières protéïques"
         provisional_grains_yield: "Rendement prévisionnel en grain"
         provisional_irrigation_water_input: "Quantité d’eau d’irrigation prévisionnelle"
+        provisional_nitrogen_input: "Quantité d'azote prévisionnelle (à épandre)"
         reproductor: "Reproducteur"
         sex: "Sexe"
         shape: "Forme"
@@ -2825,6 +2826,7 @@ fra:
         protein_matters_concentration: "Teneur en matières protéïques"
         provisional_grains_yield: "Rendement prévisionnel en grain"
         provisional_irrigation_water_input: "Quantité d’eau d’irrigation prévisionnelle"
+        provisional_nitrogen_input: "Quantité d'azote prévisionnelle (à épandre)"
         reproductor: "Reproducteur"
         sex: "Sexe"
         shape: "Forme"
@@ -2840,18 +2842,22 @@ fra:
       content_indicator_unit:
         ampere: "Ampère"
         are: "Are"
+        bar: "Bar"
         candela: "Candela"
         celsius: "Celsius"
         cubic_meter: "Mètre cube"
         day: "Jour"
+        degree: "Degrée"
         dozen: "Douzaine"
         english_horsepower: "Cheval-vapeur anglais"
         farenheit: "Farenheit"
         french_horsepower: "Cheval-vapeur français"
+        gradian: "Gradian"
         gram: "Gramme"
         gram_per_liter: "Gramme par litre"
         hectare: "Hectare"
         hectoliter: "Hectolitre"
+        hectopascal: "Hectopascal"
         hour: "Heure"
         hundred: "Centaine"
         joule: "Joule"
@@ -2861,6 +2867,9 @@ fra:
         kilogram_per_liter: "Kilogramme par litre"
         kilogram_per_square_meter: "Kilogramme par mètre carré"
         kilometer: "Kilomètre"
+        kilometer_per_hour: "Kilomètre par heure"
+        kilometer_per_second: "Kilométre par seconde"
+        kilopascal: "Kilopascal"
         kilowatt: "Kilowatt"
         kilowatt_hour: "Kilowatt par heure"
         liter: "Litre"
@@ -2868,6 +2877,7 @@ fra:
         mass_percent: "Pourcentage de masse"
         megawatt: "Mégawatt"
         meter: "Métre"
+        meter_per_second: "Métre par seconde"
         microgram: "Microgramme"
         microgram_per_liter: "Microgramme par litre"
         milligram: "Milligramme"
@@ -2878,9 +2888,11 @@ fra:
         minute: "Minute"
         mole: "Mole"
         pair: "Paire"
+        pascal: "Pascal"
         percent: "Pourcent"
         quintal: "Quintal"
         quintal_per_hectare: "Quintal par hectare"
+        radian: "Radian"
         second: "Seconde"
         square_meter: "Mètre carré"
         ten: "Dix"
@@ -3481,6 +3493,7 @@ fra:
         protein_matters_concentration: "Teneur en matières protéïques"
         provisional_grains_yield: "Rendement prévisionnel en grain"
         provisional_irrigation_water_input: "Quantité d’eau d’irrigation prévisionnelle"
+        provisional_nitrogen_input: "Quantité d'azote prévisionnelle (à épandre)"
         reproductor: "Reproducteur"
         sex: "Sexe"
         shape: "Forme"
@@ -4361,6 +4374,7 @@ fra:
         protein_matters_concentration: "Teneur en matières protéïques"
         provisional_grains_yield: "Rendement prévisionnel en grain"
         provisional_irrigation_water_input: "Quantité d’eau d’irrigation prévisionnelle"
+        provisional_nitrogen_input: "Quantité d'azote prévisionnelle (à épandre)"
         reproductor: "Reproducteur"
         sex: "Sexe"
         shape: "Forme"
@@ -4416,6 +4430,7 @@ fra:
         protein_matters_concentration: "Teneur en matières protéïques"
         provisional_grains_yield: "Rendement prévisionnel en grain"
         provisional_irrigation_water_input: "Quantité d’eau d’irrigation prévisionnelle"
+        provisional_nitrogen_input: "Quantité d'azote prévisionnelle (à épandre)"
         reproductor: "Reproducteur"
         sex: "Sexe"
         shape: "Forme"
@@ -4471,6 +4486,7 @@ fra:
         protein_matters_concentration: "Teneur en matières protéïques"
         provisional_grains_yield: "Rendement prévisionnel en grain"
         provisional_irrigation_water_input: "Quantité d’eau d’irrigation prévisionnelle"
+        provisional_nitrogen_input: "Quantité d'azote prévisionnelle (à épandre)"
         reproductor: "Reproducteur"
         sex: "Sexe"
         shape: "Forme"
