--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -1045,7 +1045,7 @@ fra:
         protein_matters_concentration: "Teneur en matières protéïques"
         provisional_grains_yield: "Rendement prévisionnel en grain"
         provisional_irrigation_water_input: "Quantité d’eau d’irrigation prévisionnelle"
-        # provisional_nitrogen_input: "Provisional nitrogen input"
+        provisional_nitrogen_input: "Quantité d'azote prévisionnelle (à épandre)"
         reproductor: "Reproducteur"
         sex: "Sexe"
         shape: "Forme"
@@ -1606,22 +1606,22 @@ fra:
       items:
         ampere: "Ampère"
         are: "Are"
-        # bar: "Bar"
+        bar: "Bar"
         candela: "Candela"
         celsius: "Celsius"
         cubic_meter: "Mètre cube"
         day: "Jour"
-        # degree: "Degree"
+        degree: "Degrée"
         dozen: "Douzaine"
         english_horsepower: "Cheval-vapeur anglais"
         farenheit: "Farenheit"
         french_horsepower: "Cheval-vapeur français"
-        # gradian: "Gradian"
+        gradian: "Gradian"
         gram: "Gramme"
         gram_per_liter: "Gramme par litre"
         hectare: "Hectare"
         hectoliter: "Hectolitre"
-        # hectopascal: "Hectopascal"
+        hectopascal: "Hectopascal"
         hour: "Heure"
         hundred: "Centaine"
         joule: "Joule"
@@ -1631,9 +1631,9 @@ fra:
         kilogram_per_liter: "Kilogramme par litre"
         kilogram_per_square_meter: "Kilogramme par mètre carré"
         kilometer: "Kilomètre"
-        # kilometer_per_hour: "Kilometer per hour"
-        # kilometer_per_second: "Kilometer per second"
-        # kilopascal: "Kilopascal"
+        kilometer_per_hour: "Kilomètre par heure"
+        kilometer_per_second: "Kilométre par seconde"
+        kilopascal: "Kilopascal"
         kilowatt: "Kilowatt"
         kilowatt_hour: "Kilowatt par heure"
         liter: "Litre"
@@ -1641,7 +1641,7 @@ fra:
         mass_percent: "Pourcentage de masse"
         megawatt: "Mégawatt"
         meter: "Métre"
-        # meter_per_second: "Meter per second"
+        meter_per_second: "Métre par seconde"
         microgram: "Microgramme"
         microgram_per_liter: "Microgramme par litre"
         milligram: "Milligramme"
@@ -1652,11 +1652,11 @@ fra:
         minute: "Minute"
         mole: "Mole"
         pair: "Paire"
-        # pascal: "Pascal"
+        pascal: "Pascal"
         percent: "Pourcent"
         quintal: "Quintal"
         quintal_per_hectare: "Quintal par hectare"
-        # radian: "Radian"
+        radian: "Radian"
         second: "Seconde"
         square_meter: "Mètre carré"
         ten: "Dix"
