--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -1165,6 +1165,7 @@ jpn:
         # protein_matters_concentration: "Teneur en matières protéïques"
         # provisional_grains_yield: "Rendement prévisionnel en grain"
         # provisional_irrigation_water_input: "Quantité d’eau d’irrigation prévisionnelle"
+        # provisional_nitrogen_input: "Quantité d'azote prévisionnelle (à épandre)"
         # reproductor: "Reproducteur"
         # sex: "Sexe"
         # shape: "Forme"
@@ -1691,18 +1692,22 @@ jpn:
       items:
         # ampere: "Ampère"
         # are: "Are"
+        # bar: "Bar"
         # candela: "Candela"
         # celsius: "Celsius"
         # cubic_meter: "Mètre cube"
         # day: "Jour"
+        # degree: "Degrée"
         # dozen: "Douzaine"
         # english_horsepower: "Cheval-vapeur anglais"
         # farenheit: "Farenheit"
         # french_horsepower: "Cheval-vapeur français"
+        # gradian: "Gradian"
         # gram: "Gramme"
         # gram_per_liter: "Gramme par litre"
         # hectare: "Hectare"
         # hectoliter: "Hectolitre"
+        # hectopascal: "Hectopascal"
         # hour: "Heure"
         # hundred: "Centaine"
         # joule: "Joule"
@@ -1712,6 +1717,9 @@ jpn:
         # kilogram_per_liter: "Kilogramme par litre"
         # kilogram_per_square_meter: "Kilogramme par mètre carré"
         # kilometer: "Kilomètre"
+        # kilometer_per_hour: "Kilomètre par heure"
+        # kilometer_per_second: "Kilométre par seconde"
+        # kilopascal: "Kilopascal"
         # kilowatt: "Kilowatt"
         # kilowatt_hour: "Kilowatt par heure"
         # liter: "Litre"
@@ -1719,6 +1727,7 @@ jpn:
         # mass_percent: "Pourcentage de masse"
         # megawatt: "Mégawatt"
         # meter: "Métre"
+        # meter_per_second: "Métre par seconde"
         # microgram: "Microgramme"
         # microgram_per_liter: "Microgramme par litre"
         # milligram: "Milligramme"
@@ -1729,9 +1738,11 @@ jpn:
         # minute: "Minute"
         # mole: "Mole"
         # pair: "Paire"
+        # pascal: "Pascal"
         # percent: "Pourcent"
         # quintal: "Quintal"
         # quintal_per_hectare: "Quintal par hectare"
+        # radian: "Radian"
         # second: "Seconde"
         # square_meter: "Mètre carré"
         # ten: "Dix"
