--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -1125,7 +1125,7 @@ arb:
         # animal_disease_state: "Phase du bioprocessus de maladie d’un animal"
         # animal_life_state: "Phase du bioprocessus de vie d’un animal"
         # application_width: "Largeur de travail"
-        # available_water_capacity: "Réserve utile (RU)"
+        # available_water_capacity_per_area: "Réserve utile (RU)"
         # calving_ease_index: "Index de facilité de naissane"
         # clostridial_spores_concentration: "Concentration en spores butyriques"
         # cultural_soil_state: "Etat cultural du sol"
@@ -1136,9 +1136,11 @@ arb:
         # fertility_index: "Index de fertilité"
         # freezing_point_temperature: "Point de solidification"
         # geographic_coordinate: "Coordonnées géographiques"
+        # grain_yield_per_area: "Rendement en grain par unité de surface"
         # height: "Hauteur"
         # immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
         # inhibitors_presence: "Présence de résidus d’inhibiteurs"
+        # irrigation_water_input_per_area: "Quantité d'eau d'irrigation par unité de surface"
         # leaf_count: "Nombre de talles"
         # length: "Longueur"
         # lipolysis: "Lipolyse"
@@ -1154,6 +1156,7 @@ arb:
         # net_surface_area: "Surface nette"
         # net_volume: "Volume net"
         # nitrogen_concentration: "Teneur en azote"
+        # nitrogen_input_per_area: "Quantité d'azote par unité de surface"
         # phosphorus_concentration: "Teneur en phosphore"
         # plant_life_state: "Phase du bioprocessus de vie d’un végétal"
         # plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
@@ -1161,13 +1164,11 @@ arb:
         # potassium_concentration: "Teneur en potassium"
         # protein_concentration_index: "TP (Taux Protéïque)"
         # protein_matters_concentration: "Teneur en matières protéïques"
-        # provisional_grains_yield: "Rendement prévisionnel en grain"
-        # provisional_irrigation_water_input: "Quantité d’eau d’irrigation prévisionnelle"
-        # provisional_nitrogen_input: "Quantité d'azote prévisionnelle (à épandre)"
         # reproductor: "Reproducteur"
         # sex: "Sexe"
         # shape: "Forme"
         # somatic_cell_concentration: "Dénombrement des cellules somatiques"
+        # straw_yield_per_area: "Rendement en tige par unité de surface"
         # temperature: "Température"
         # thousand_grain_mass: "Poids de mille grains"
         # total_bacteria_concentration: "Dénombrement des germes totaux"
@@ -1368,6 +1369,7 @@ arb:
         # female_adult_cow: "Vache"
         # female_young_cow: "Génisse"
         # fertilizer: "Engrais"
+        # fruit: "Fruit"
         # fuel: "Gasoil"
         # gas: "Essence"
         # grain: "Graine"
@@ -1470,7 +1472,9 @@ arb:
         # coop:uree_gr_vrac: "uree gr vrac"
         # corn_crop: "Culture de maïs"
         # corn_grain: "Graine de maïs"
+        # corn_grain_crop: "Culture de maïs grain"
         # corn_seed_25: "Semence de maïs sac de 25kg"
+        # corn_silage_crop: "Culture de maïs ensilage"
         # cow_milk: "Lait de vache"
         # cultivable_zone: "Zone cultivable"
         # diesel: "Diesel"
@@ -1580,6 +1584,7 @@ arb:
         # abilities: "Compétences"
         # category: "Categorie"
         # derivative_of: "Dérivé"
+        # derivatives: "Produits dérivés"
         # frozen_indicators: "Indicateurs fixes"
         # linkage_points: "Points d’attelage"
         # population_counting: "Mode de gestion de la population"
@@ -1602,6 +1607,7 @@ arb:
         # building_division: "Pièce ou zone d’un bâtiment"
         # calf: "Veau"
         # cattle_herd: "Troupeau de bovins"
+        # cereal_crop: "Culture de céréales"
         # chemical_fertilizer: "Engrais chimique"
         # crop: "Culture"
         # cultivable_zone: "Zone cultivable"
@@ -1616,10 +1622,13 @@ arb:
         # fertiliser_division: "Zone engrais"
         # food: "Aliment"
         # forager: "Ensileuse"
+        # fruit: "Fruit"
+        # fruit_crop: "Culture fruitière"
         # fuel: "Carburant"
         # fungicide: "Fongicide"
         # gas: "Gaz"
         # grain: "Céréale"
+        # grain_crop: "Culture"
         # grass: "Herbe"
         # hay_rake: "Andaineur"
         # herbicide: "Herbicide"
@@ -1750,6 +1759,7 @@ arb:
         # thousand_per_liter: "Millier par litre"
         # thousand_per_milliliter: "Millier par millilitre"
         # ton: "Tonne"
+        # ton_per_hectare: "Tonne par hectare"
         # unity: "Unité"
         # unity_per_kilogram: "Unité par kilogramme"
         # unity_per_liter: "Unité par litre"
@@ -1818,6 +1828,7 @@ arb:
         # fabulis: "Fabulis"
         # flap_silt_soil: "Limons battants"
         # forager: "Ensileuse"
+        # fruit: "Fruit"
         # fuel: "Gasoil"
         # fungicide: "Produit fongicide"
         # fungus: "Champignon"
@@ -1826,6 +1837,7 @@ arb:
         # gas: "Essence"
         # grain: "Grain"
         # granite_arena_soil: "Sol sur arène granitique"
+        # grass: "Herbe"
         # grenache: "Grenache"
         # grenache_noir: "Grenache noir"
         # harvest: "Récolte"
