--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -1199,7 +1199,7 @@ eng:
         animal_disease_state: "Animal disease state"
         animal_life_state: "Animal life state"
         # application_width: "Largeur de travail"
-        # available_water_capacity: "Réserve utile (RU)"
+        # available_water_capacity_per_area: "Réserve utile (RU)"
         # calving_ease_index: "Index de facilité de naissane"
         cells_concentration: "Cells concentration" #?
         clostridial_spores_concentration: "Clostridial spores concentration"
@@ -1211,11 +1211,13 @@ eng:
         # fertility_index: "Index de fertilité"
         freezing_point_temperature: "Freezing point temperature"
         # geographic_coordinate: "Coordonnées géographiques"
+        # grain_yield_per_area: "Rendement en grain par unité de surface"
         ground_appearance: "Ground appearance" #?
         # height: "Hauteur"
         immunoglobulins_concentration: "Immunoglobulins concentration"
         in_production: "In production" #?
         inhibitors_presence: "Inhibitors presence"
+        # irrigation_water_input_per_area: "Quantité d'eau d'irrigation par unité de surface"
         # leaf_count: "Nombre de talles"
         # length: "Longueur"
         lipolysis: "Lipolysis"
@@ -1231,6 +1233,7 @@ eng:
         # net_surface_area: "Surface nette"
         # net_volume: "Volume net"
         # nitrogen_concentration: "Teneur en azote"
+        # nitrogen_input_per_area: "Quantité d'azote par unité de surface"
         # phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Plant life state"
         plant_reproduction_state: "Plant reproduction state"
@@ -1238,14 +1241,12 @@ eng:
         # potassium_concentration: "Teneur en potassium"
         # protein_concentration_index: "TP (Taux Protéïque)"
         protein_matters_concentration: "Protein matters concentration"
-        # provisional_grains_yield: "Rendement prévisionnel en grain"
-        # provisional_irrigation_water_input: "Quantité d’eau d’irrigation prévisionnelle"
-        # provisional_nitrogen_input: "Quantité d'azote prévisionnelle (à épandre)"
         # reproductor: "Reproducteur"
         # sex: "Sexe"
         # shape: "Forme"
         # somatic_cell_concentration: "Dénombrement des cellules somatiques"
         sowable: "Sowable" #?
+        # straw_yield_per_area: "Rendement en tige par unité de surface"
         temperature: "Temperature"
         # thousand_grain_mass: "Poids de mille grains"
         total_bacteria_concentration: "Total bacteria concentration"
@@ -1453,6 +1454,7 @@ eng:
         # female_adult_cow: "Vache"
         # female_young_cow: "Génisse"
         # fertilizer: "Engrais"
+        # fruit: "Fruit"
         # fuel: "Gasoil"
         # gas: "Essence"
         # grain: "Graine"
@@ -1555,7 +1557,9 @@ eng:
         # coop:uree_gr_vrac: "uree gr vrac"
         # corn_crop: "Culture de maïs"
         # corn_grain: "Graine de maïs"
+        # corn_grain_crop: "Culture de maïs grain"
         # corn_seed_25: "Semence de maïs sac de 25kg"
+        # corn_silage_crop: "Culture de maïs ensilage"
         # cow_milk: "Lait de vache"
         # cultivable_zone: "Zone cultivable"
         # diesel: "Diesel"
@@ -1671,6 +1675,7 @@ eng:
         depreciable: "Depreciable" #?
         derivative: "Derivative" #?
         # derivative_of: "Dérivé"
+        # derivatives: "Produits dérivés"
         frozen_indicators: "Frozen indicators"
         indicators: "Indicators" #?
         # linkage_points: "Points d’attelage"
@@ -1703,6 +1708,7 @@ eng:
         # building_division: "Pièce ou zone d’un bâtiment"
         calf: "Calf"
         # cattle_herd: "Troupeau de bovins"
+        # cereal_crop: "Culture de céréales"
         # chemical_fertilizer: "Engrais chimique"
         # crop: "Culture"
         # cultivable_zone: "Zone cultivable"
@@ -1717,10 +1723,13 @@ eng:
         # fertiliser_division: "Zone engrais"
         # food: "Aliment"
         # forager: "Ensileuse"
+        # fruit: "Fruit"
+        # fruit_crop: "Culture fruitière"
         # fuel: "Carburant"
         # fungicide: "Fongicide"
         # gas: "Gaz"
         grain: "Grain"
+        # grain_crop: "Culture"
         # grass: "Herbe"
         # hay_rake: "Andaineur"
         # herbicide: "Herbicide"
@@ -1870,6 +1879,7 @@ eng:
         # thousand_per_liter: "Millier par litre"
         # thousand_per_milliliter: "Millier par millilitre"
         # ton: "Tonne"
+        # ton_per_hectare: "Tonne par hectare"
         unity: "Unity"
         # unity_per_kilogram: "Unité par kilogramme"
         # unity_per_liter: "Unité par litre"
@@ -1938,6 +1948,7 @@ eng:
         # fabulis: "Fabulis"
         # flap_silt_soil: "Limons battants"
         # forager: "Ensileuse"
+        # fruit: "Fruit"
         # fuel: "Gasoil"
         # fungicide: "Produit fongicide"
         fungus: "Fungus"
@@ -1946,6 +1957,7 @@ eng:
         # gas: "Essence"
         # grain: "Grain"
         # granite_arena_soil: "Sol sur arène granitique"
+        # grass: "Herbe"
         # grenache: "Grenache"
         # grenache_noir: "Grenache noir"
         # harvest: "Récolte"
