--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -597,7 +597,9 @@ fra:
     depreciation_percentage: "Pourcentage d’amortissement"
     depreciations: "Amortissements"
     depth: "Profondeur"
+    derivative: "Derivative"
     derivative_of: "Dérivé de"
+    # derivatives_list: "Derivatives list"
     description: "Description"
     detail_payments: "Détailler les paiements"
     diff_less: "Droits enlevés"
