--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -1001,7 +1001,7 @@ fra:
         animal_disease_state: "Phase du bioprocessus de maladie d’un animal"
         animal_life_state: "Phase du bioprocessus de vie d’un animal"
         application_width: "Largeur de travail"
-        available_water_capacity: "Réserve utile (RU)"
+        available_water_capacity_per_area: "Réserve utile (RU)"
         calving_ease_index: "Index de facilité de naissane"
         clostridial_spores_concentration: "Concentration en spores butyriques"
         cultural_soil_state: "Etat cultural du sol"
@@ -1013,9 +1013,11 @@ fra:
         fertility_index: "Index de fertilité"
         freezing_point_temperature: "Point de solidification"
         geographic_coordinate: "Coordonnées géographiques"
+        grain_yield_per_area: "Rendement en grain par unité de surface"
         height: "Hauteur"
         immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
         inhibitors_presence: "Présence de résidus d’inhibiteurs"
+        irrigation_water_input_per_area: "Quantité d'eau d'irrigation par unité de surface"
         leaf_count: "Nombre de talles"
         length: "Longueur"
         lipolysis: "Lipolyse"
@@ -1036,6 +1038,7 @@ fra:
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
         nitrogen_concentration: "Teneur en azote"
+        nitrogen_input_per_area: "Quantité d'azote par unité de surface"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
         plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
@@ -1043,13 +1046,11 @@ fra:
         potassium_concentration: "Teneur en potassium"
         protein_concentration_index: "TP (Taux Protéïque)"
         protein_matters_concentration: "Teneur en matières protéïques"
-        provisional_grains_yield: "Rendement prévisionnel en grain"
-        provisional_irrigation_water_input: "Quantité d’eau d’irrigation prévisionnelle"
-        provisional_nitrogen_input: "Quantité d'azote prévisionnelle (à épandre)"
         reproductor: "Reproducteur"
         sex: "Sexe"
         shape: "Forme"
         somatic_cell_concentration: "Dénombrement des cellules somatiques"
+        straw_yield_per_area: "Rendement en tige par unité de surface"
         temperature: "Température"
         thousand_grain_mass: "Poids de mille grains"
         total_bacteria_concentration: "Dénombrement des germes totaux"
@@ -1260,6 +1261,7 @@ fra:
         female_adult_cow: "Vache"
         female_young_cow: "Génisse"
         fertilizer: "Engrais"
+        fruit: "Fruit"
         fuel: "Gasoil"
         gas: "Essence"
         grain: "Graine"
@@ -1365,7 +1367,9 @@ fra:
         coop:uree_gr_vrac: "uree gr vrac"
         corn_crop: "Culture de maïs"
         corn_grain: "Graine de maïs"
+        corn_grain_crop: "Culture de maïs grain"
         corn_seed_25: "Semence de maïs sac de 25kg"
+        corn_silage_crop: "Culture de maïs ensilage"
         cow_milk: "Lait de vache"
         cultivable_zone: "Zone cultivable"
         diesel: "Diesel"
@@ -1479,6 +1483,7 @@ fra:
         abilities: "Compétences"
         category: "Categorie"
         derivative_of: "Dérivé"
+        derivatives: "Produits dérivés"
         frozen_indicators: "Indicateurs fixes"
         linkage_points: "Points d’attelage"
         population_counting: "Mode de gestion de la population"
@@ -1503,6 +1508,7 @@ fra:
         building_division: "Pièce ou zone d’un bâtiment"
         calf: "Veau"
         cattle_herd: "Troupeau de bovins"
+        cereal_crop: "Culture de céréales"
         chemical_fertilizer: "Engrais chimique"
         crop: "Culture"
         cultivable_zone: "Zone cultivable"
@@ -1517,10 +1523,13 @@ fra:
         fertiliser_division: "Zone engrais"
         food: "Aliment"
         forager: "Ensileuse"
+        fruit: "Fruit"
+        fruit_crop: "Culture fruitière"
         fuel: "Carburant"
         fungicide: "Fongicide"
         gas: "Gaz"
         grain: "Céréale"
+        grain_crop: "Culture"
         grass: "Herbe"
         hay_rake: "Andaineur"
         herbicide: "Herbicide"
@@ -1666,6 +1675,7 @@ fra:
         thousand_per_liter: "Millier par litre"
         thousand_per_milliliter: "Millier par millilitre"
         ton: "Tonne"
+        ton_per_hectare: "Tonne par hectare"
         unity: "Unité"
         unity_per_kilogram: "Unité par kilogramme"
         unity_per_liter: "Unité par litre"
@@ -1735,6 +1745,7 @@ fra:
         fabulis: "Fabulis"                                 # triticum_durum
         flap_silt_soil: "Limons battants"                  # land_parcel
         forager: "Ensileuse"                               # equipment
+        fruit: "Fruit"                                     # organic_matter
         fuel: "Gasoil"                                     # organic_matter
         fungicide: "Produit fongicide"                     # plant_medicine
         fungus: "Champignon"                               # bioproduct
@@ -1743,6 +1754,7 @@ fra:
         gas: "Essence"                                     # organic_matter
         grain: "Grain"                                     # organic_matter
         granite_arena_soil: "Sol sur arène granitique"     # land_parcel
+        grass: "Herbe"                                     # organic_matter
         grenache: "Grenache"                               # vitis_vinifera
         grenache_noir: "Grenache noir"                     # vitis_vinifera
         harvest: "Récolte"                                 # equipment
