--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -623,6 +623,7 @@ jpn:
     # depreciation_percentage: "Pourcentage d’amortissement"
     # depreciations: "Amortissements"
     # depth: "Profondeur"
+    # derivative: "Derivative"
     # derivative_of: "Dérivé de"
     # description: "Description"
     # detail_payments: "Détailler les paiements"
