--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -622,6 +622,7 @@ spa:
     # depreciation_percentage: "Pourcentage d’amortissement"
     # depreciations: "Amortissements"
     # depth: "Profondeur"
+    # derivative: "Derivative"
     # derivative_of: "Dérivé de"
     # description: "Description"
     # detail_payments: "Détailler les paiements"
