--- a/config/locales/jpn/rights.yml
+++ b/config/locales/jpn/rights.yml
@@ -21,11 +21,10 @@ jpn:
     # import_export_entities: "Importer, exporter des fiches clients/fournisseurs"
     # mail_to_listings: "Gérer l’envoi de courriels par les extractions"
     # manage_accounts: "Gérer les comptes comptables"
-    # manage_areas: "Gérer les zones"
     # manage_bank_statements: "Pointage des relevés de comptes"
     # manage_buildings: "Gérer les lieux de stockage"
     # manage_cash_transfers: "Gérer les virements internes"
-    # manage_cashes: "Gérer les comptes de trésorerie"
+    # manage_cashes: "Gérer les trésoreries"
     # manage_catalogs: "Gérer les catalogues de prix"
     # manage_custom_fields: "Gérer les champs personnalisés"
     # manage_deposits: "Gérer les remises en banque"
@@ -52,6 +51,7 @@ jpn:
     # manage_outgoing_delivery_modes: "Gérer les types de livraison"
     # manage_outgoing_payment_modes: "Gérer les modes de décaissement"
     # manage_outgoing_payments: "Gérer les décaissements"
+    # manage_postal_zones: "Gérer les zones postales"
     # manage_prices: "Gérer les prix"
     # manage_productions: "Gérer les productions"
     # manage_products: "Gérer les produits"
