--- a/config/locales/eng/rights.yml
+++ b/config/locales/eng/rights.yml
@@ -21,7 +21,7 @@ eng:
     import_export_entities: "Import, export people listings"
     mail_to_listings: "Send mail to lists"
     manage_accounts: "Manage accounts"
-    manage_areas: "Manage areas"
+    manage_areas: "Manage areas" #?
     manage_assets: "Manage assets" #?
     manage_bank_statements: "Point bank statements"
     manage_buildings: "Manage buildings"
@@ -54,6 +54,7 @@ eng:
     manage_outgoing_delivery_modes: "Manage outgoing delivery modes"
     manage_outgoing_payment_modes: "Manage disbursement modes"
     manage_outgoing_payments: "Manage disbursements"
+    # manage_postal_zones: "Gérer les zones postales"
     manage_prices: "Manage prices"
     manage_product_categories: "Manage product categories" #?
     manage_product_price_listings: "Manage product price listings" #?
