--- a/config/locales/fra/prints/purchase_order.xml
+++ b/config/locales/fra/prints/purchase_order.xml
@@ -24,7 +24,7 @@
 	<set>
 	  <text value="Bon de commande N°{{purchase_order/number}}" bold="true" left="50%" align="center" top="7mm" size="12"/>
 	  <text value="Référence fournisseur {{purchase_order/reference_number}}" left="50%" align="center" top="12mm" size="10" if="purchase_order.reference_number"/>
-	  <text value="À {{Entity.of_company.default_mail_address.mail_area/city_name?capitalize=true}}, le {{purchase_order/created_on?format=month_letter}}" left="100%" align="right"/>
+	  <text value="À {{Entity.of_company.default_mail_address.mail_postal_zone/city_name?capitalize=true}}, le {{purchase_order/created_on?format=month_letter}}" left="100%" align="right"/>
 	</set>      
       </part>
 
