--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -388,6 +388,7 @@ jpn:
       # person: "Personne"
       # plant: "Plante"
       # plant_medicine: "Produit phytosanitaire"
+      # postal_zone: "Zone postale"
       # preference: "Préférence"
       # prescription: "Prescription"
       # product: "Produits"
@@ -460,8 +461,6 @@ jpn:
     # amounts_scale: "Nombre de chiffres après le virgule"
     # annotation: "Annotation"
     # archiving: "Méthode d’archivage"
-    # area: "Zone postale"
-    # areas: "Zones postales"
     # arrival_cause: "Cause d’entrée"
     # arrived_on: "Date d’entrée"
     # assimilated_taxes_amount: "Montant des taxes assimilées"
@@ -775,7 +774,6 @@ jpn:
     # locked_at: "Verrouillé à"
     # mail: "E-mail"
     # mail_addresses: "Adresses postales"
-    # mail_area: "Zone postale"
     # mail_auto_update: "Mettre à jour l’adresse automatiquement"
     # mail_columns: "Colonnes de courriel"
     # mail_country: "Pays"
@@ -786,6 +784,7 @@ jpn:
     # mail_line_4: "Numéro et libellé de la voie"
     # mail_line_5: "Mention spéciale - Lieu dit"
     # mail_line_6: "Code postal ET ville"
+    # mail_postal_zone: "Zone postale"
     # mails: "Emails"
     # managed: "Géré par le système"
     # mandates: "Responsabilités"
@@ -883,6 +882,8 @@ jpn:
     # population: "Population"
     # population_counting: "Gestion quantitative"
     # position: "Position"
+    # postal_zone: "Zone postale"
+    # postal_zones: "Zones postales"
     # postcode: "Code postal"
     # preferences: "Préférences"
     # prescription: "Prescription"
